--- a/app/src/main/res/layout/activity_new_profile.xml
+++ b/app/src/main/res/layout/activity_new_profile.xml
@@ -79,6 +79,13 @@
             />
 
         <Button
+            android:id="@+id/buttonDel"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Delete Member"
+            />
+
+        <Button
             android:id="@+id/save1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
