app fully running

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,16 +4,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#fafafa"
+    android:background="@drawable/a4"
     tools:context=".MainActivity">
 
     <Button
         android:id="@+id/btnProfile"
-        android:layout_width="match_parent"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
-        android:background="#03a9f4"
+        android:background="@drawable/rounded_button"
         android:text="Profile"
-        android:textColor="#fafafa"
+        android:textSize="20dp"
+        android:textStyle="bold"
+        android:textColor="#000"
         app:layout_constraintBottom_toTopOf="@+id/button2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.501"
@@ -23,11 +25,13 @@
 
     <Button
         android:id="@+id/button2"
-        android:layout_width="match_parent"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
-        android:background="#03a9f4"
+        android:background="@drawable/rounded_button"
         android:text="View Members"
-        android:textColor="#fafafa"
+        android:textSize="20dp"
+        android:textStyle="bold"
+        android:textColor="#000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -36,11 +40,13 @@
 
     <Button
         android:id="@+id/button3"
-        android:layout_width="match_parent"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
-        android:background="#03a9f4"
+        android:background="@drawable/rounded_button"
         android:text="Recommend"
-        android:textColor="#fafafa"
+        android:textSize="20dp"
+        android:textStyle="bold"
+        android:textColor="#000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
