--- a/app/src/main/res/layout/activity_personal_info.xml
+++ b/app/src/main/res/layout/activity_personal_info.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/a3"
     android:fillViewport="true">
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -35,12 +36,12 @@
             android:hint="Age"
             />
 
-        <EditText
-            android:id="@+id/editTextTextPersonName9"
+        <Spinner
+            android:id="@+id/spinner3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="text"
-            android:hint="Occupation"
+            android:entries="@array/occupation"
+            android:prompt="@string/occupation_prompt"
             />
 
         <EditText
