--- a/app/src/main/res/layout/activity_view_members.xml
+++ b/app/src/main/res/layout/activity_view_members.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/a3"
     android:fillViewport="true">
+
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="fill_parent"
