--- a/app/src/main/res/layout/activity_recommendation.xml
+++ b/app/src/main/res/layout/activity_recommendation.xml
@@ -18,11 +18,12 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:layout_marginBottom="136dp"
-            android:background="#ffffff"
+            android:background="#fffde7"
+            android:fontFamily="sans-serif-black"
             android:padding="10dp"
-            android:textColor="#607d8b"
+            android:textColor="#0d5302"
             android:textSize="25sp"
-            android:textStyle="bold|italic"
+            android:textStyle="normal"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
